<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gastos Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nuevo_usuario">Nuevo_usuario</string>
    <string name="title_activity_usuario_datos_">UsuarioDatos_Activity</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_tablayout">TablayoutActivity</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>
    <string name="seleccione_usuario">Selecciona tu usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="agregar">botonAgregar</string>
    <string name="TituloAp">Insos</string>
    <string name="botonAgregar">Agregar usuario</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="nombre">Nombre</string>
    <string name="edad">edad</string>
    <string name="numero">numero</string>
    <string name="fechaNacimiento">fecha de nacimiento</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="title_activity_registro__nuevo_gasto">Registro_NuevoGasto</string>
    <string name="title_activity_registro__nuevo_ingreso">Registro_NuevoIngreso</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="title_activity_xy__plot">XY_PlotActivity</string>
    <string name="title_activity_informes_gastos_ingresos">InformesGastosIngresos</string>
    <string name="title_activity_reporte2_fechas">Reporte2Fechas</string>

</resources>